# ModBusCowFrame

./: .gitignore  pyproject.toml
src/cow_modbus/: logger.py  main.py  modbus_client.py
src/cow_modbus/protocol/: frame_message.py
